<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="50dp"
    android:orientation="vertical"
    android:gravity="center">

    <LinearLayout
        android:background="@drawable/border"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">


        <TextView
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/join_text" />

        <TextView
            android:id="@+id/popup_animal_list_name1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#ff000000"
            android:text="Animal List"
            android:textStyle="bold"/>
        <TextView
            android:id="@+id/popup_started_at"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/startedAt"/>

        <Button
            android:id="@+id/join_headcount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:text="@string/join"
            android:onClick="popupJoinHeadcountClicked"/>


    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="20dp"
        android:background="@drawable/border"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">


        <TextView
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create_text" />

        <TextView
            android:id="@+id/popup_animal_list_name2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#ff000000"
            android:text="Animal List"
            android:textStyle="bold"/>

        <Button
            android:id="@+id/new_headcount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:text="@string/create"
            android:onClick="popupNewHeadcountClicked"/>

        <Button

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:onClick="dismissPopup"/>


    </LinearLayout>



</LinearLayout>