<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    tools:context="se.kth.mikaele3.sheepcounter.SignInActivity">

    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/iconquantumsheep"
        android:layout_weight="0"/>

    <TextView
        android:gravity="center"
        android:text="@string/applicationName"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textSize="32dp"
        android:paddingBottom="15dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:orientation="horizontal">




        <TextView android:text="@string/username" android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:gravity="center"
            android:layout_weight="1"
            android:textSize="23dp"/>

        <EditText android:text="" android:layout_width="fill_parent"
            android:layout_gravity="bottom"
            android:layout_weight="1"
            android:layout_height="wrap_content"/>

        </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:gravity="center_horizontal">


        <TextView android:text="@string/password" android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:gravity="center"
            android:layout_weight="1"
            android:textSize="23dp"/>

        <EditText  android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1" android:inputType="textPassword" />

    </LinearLayout>


        <Button android:text="@string/login" android:layout_width="wrap_content"
            android:layout_margin="15dp"


            android:layout_height="wrap_content"
            />






</LinearLayout>
